Desk with cube mesh in level

--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -193,6 +193,7 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -373,8 +374,9 @@ Visual="\"Object.Appearance.Font\" "
 Object="\"Object.Appearance.Font\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UserInterface/WBP_HUD
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem0=/Game/Blueprints/BPC_Desk1
+MRUItem1=/Game/UserInterface/WBP_HUD
+MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
 
 [UMGEditor.Designer]
 PreviewWidth=1280
