Small improvements to comments and debugs

--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -168,7 +168,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Input
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -195,7 +195,8 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -479,6 +480,7 @@ BoxComponent.Cooking=True
 BoxComponent.Events=True
 K2Node_VariableGet.Events=True
 PostProcessVolume.Cooking=True
+BPC_Desk1_C.Default=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -500,12 +502,12 @@ Character="\"Object.beginPlayTags\" "
 Pawn="\"Object.beginPlayTags\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Input/IMC_Default
-MRUItem1=/Game/FirstPerson/Input/Actions/IA_Interact
-MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem3=/Game/Blueprints/BP_DeskMaster
-MRUItem4=/Game/Materials/M_HighlightMat
-MRUItem5=/Game/Blueprints/BPC_Desk1
+MRUItem0=/Game/Blueprints/BPC_Desk1
+MRUItem1=/Game/FirstPerson/Input/IMC_Default
+MRUItem2=/Game/FirstPerson/Input/Actions/IA_Interact
+MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem4=/Game/Blueprints/BP_DeskMaster
+MRUItem5=/Game/Materials/M_HighlightMat
 MRUItem6=/Game/UserInterface/WBP_HUD
 
 [UMGEditor.Designer]
@@ -1696,7 +1698,7 @@ bUseUnsortedMenus=False
 [DetailCustomWidgetExpansion]
 PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features
 BrushComponent=PostProcessVolume.Rendering Features.Rendering Features
-BPC_Desk1_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features
+BPC_Desk1_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
 SceneComponent=
 StaticMeshComponent=PostProcessVolume.Rendering Features.Rendering Features
 BillboardComponent=PostProcessVolume.Rendering Features.Rendering Features
