Removed hasRifle bool in Player

--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -195,8 +195,9 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -502,10 +503,10 @@ Character="\"Object.beginPlayTags\" "
 Pawn="\"Object.beginPlayTags\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BPC_Desk1
-MRUItem1=/Game/FirstPerson/Input/IMC_Default
-MRUItem2=/Game/FirstPerson/Input/Actions/IA_Interact
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/Blueprints/BPC_Desk1
+MRUItem2=/Game/FirstPerson/Input/IMC_Default
+MRUItem3=/Game/FirstPerson/Input/Actions/IA_Interact
 MRUItem4=/Game/Blueprints/BP_DeskMaster
 MRUItem5=/Game/Materials/M_HighlightMat
 MRUItem6=/Game/UserInterface/WBP_HUD
