Added camera trace forward to player

--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -198,6 +198,8 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
+OpenAssetsAtExit=/Game/FirstPerson/Input/Actions/IA_Interact.IA_Interact
+OpenAssetsAtExit=/Game/FirstPerson/Input/IMC_Default.IMC_Default
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -482,6 +484,19 @@ BoxComponent.Events=True
 K2Node_VariableGet.Events=True
 PostProcessVolume.Cooking=True
 BPC_Desk1_C.Default=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.ComponentTick=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -498,15 +513,15 @@ MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 BP_DeskMaster_C=
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[14]\" "
 DataAsset="\"Object.Mappings.Mappings.Mappings[14]\" "
-BP_FirstPersonCharacter_C="\"Object.beginPlayTags\" "
-Character="\"Object.beginPlayTags\" "
-Pawn="\"Object.beginPlayTags\" "
+BP_FirstPersonCharacter_C=
+Character=
+Pawn=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem1=/Game/Blueprints/BPC_Desk1
-MRUItem2=/Game/FirstPerson/Input/IMC_Default
-MRUItem3=/Game/FirstPerson/Input/Actions/IA_Interact
+MRUItem0=/Game/FirstPerson/Input/IMC_Default
+MRUItem1=/Game/FirstPerson/Input/Actions/IA_Interact
+MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem3=/Game/Blueprints/BPC_Desk1
 MRUItem4=/Game/Blueprints/BP_DeskMaster
 MRUItem5=/Game/Materials/M_HighlightMat
 MRUItem6=/Game/UserInterface/WBP_HUD
@@ -1703,12 +1718,13 @@ BPC_Desk1_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVol
 SceneComponent=
 StaticMeshComponent=PostProcessVolume.Rendering Features.Rendering Features
 BillboardComponent=PostProcessVolume.Rendering Features.Rendering Features
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,
 BP_DeskMaster_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Interact.IA_Interact,
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.beginPlayTags,
-BP_FirstPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
+BP_FirstPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,
 BoxComponent=PostProcessVolume.Rendering Features.Rendering Features
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/BPC_Desk1.BPC_Desk1;
@@ -1873,4 +1889,10 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[SuppressableDialogs]
+DeleteConfirmationVariable_Warning=False
+
+[MessageLog]
+LastLogListing=BlueprintLog
 
