Created interact event
You can now trade line using IA_Interact and the desk will detect the player, meaning that sit down message is displayed. Additionally created data struct for interactable blueprints

--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -198,8 +198,8 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/FirstPerson/Input/Actions/IA_Interact.IA_Interact
-OpenAssetsAtExit=/Game/FirstPerson/Input/IMC_Default.IMC_Default
+OpenAssetsAtExit=/Game/Blueprints/BP_DeskMaster.BP_DeskMaster
+OpenAssetsAtExit=/Game/Blueprints/BPS_InteractableActorStructure.BPS_InteractableActorStructure
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -497,6 +497,40 @@ CameraComponent.ComponentReplication=True
 CameraComponent.Activation=True
 CameraComponent.Cooking=True
 CameraComponent.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+BP_DeskMaster_C.Default=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_GetClassDefaults.PinOptions=True
+UserDefinedStruct.Structure=True
+UserDefinedStruct.DefaultValues=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Imports=True
+Blueprint.Interfaces=True
+Blueprint.Thumbnail=True
+K2Node_SwitchString.PinOptions=True
+K2Node_SwitchInteger.PinOptions=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -510,21 +544,23 @@ Object=
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
-BP_DeskMaster_C=
+BP_DeskMaster_C="\"Object.beginPlayTags\" "
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[14]\" "
 DataAsset="\"Object.Mappings.Mappings.Mappings[14]\" "
-BP_FirstPersonCharacter_C=
-Character=
-Pawn=
+BP_FirstPersonCharacter_C="\"Object.listOfInteractables\" "
+Character="\"Object.listOfInteractables\" "
+Pawn="\"Object.listOfInteractables\" "
+BPC_Desk1_C="\"Object.Default.beginPlayTags\" \"Object.Default.InteractableActorInfo\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Input/IMC_Default
-MRUItem1=/Game/FirstPerson/Input/Actions/IA_Interact
-MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem3=/Game/Blueprints/BPC_Desk1
-MRUItem4=/Game/Blueprints/BP_DeskMaster
-MRUItem5=/Game/Materials/M_HighlightMat
-MRUItem6=/Game/UserInterface/WBP_HUD
+MRUItem0=/Game/Blueprints/BPS_InteractableActorStructure
+MRUItem1=/Game/Blueprints/BP_DeskMaster
+MRUItem2=/Game/FirstPerson/Input/IMC_Default
+MRUItem3=/Game/FirstPerson/Input/Actions/IA_Interact
+MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem5=/Game/Blueprints/BPC_Desk1
+MRUItem6=/Game/Materials/M_HighlightMat
+MRUItem7=/Game/UserInterface/WBP_HUD
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1715,16 +1751,23 @@ bUseUnsortedMenus=False
 PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features
 BrushComponent=PostProcessVolume.Rendering Features.Rendering Features
 BPC_Desk1_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
-SceneComponent=
-StaticMeshComponent=PostProcessVolume.Rendering Features.Rendering Features
+SceneComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
+StaticMeshComponent=PostProcessVolume.Rendering Features.Rendering Features,
 BillboardComponent=PostProcessVolume.Rendering Features.Rendering Features
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,
-BP_DeskMaster_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,
+BP_DeskMaster_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Interact.IA_Interact,
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
-BP_FirstPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,
-BoxComponent=PostProcessVolume.Rendering Features.Rendering Features
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,
+BP_FirstPersonCharacter_C=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,
+BoxComponent=PostProcessVolume.Rendering Features.Rendering Features,
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
+K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
+EdGraph=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
+StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
+UserDefinedStruct=UserDefinedStruct.Structure.AE03DC9346529D8EC318B981AF4834A3,UserDefinedStruct.Structure.4933E9B84B84FFA52EA3AE9DFAA4993B,UserDefinedStruct.Structure.5EE7EFC04199F44ED9DED0A5EBAFCDF8,
+BPS_InteractableActorStructure=UserDefinedStruct.Structure.AE03DC9346529D8EC318B981AF4834A3,UserDefinedStruct.Structure.4933E9B84B84FFA52EA3AE9DFAA4993B,UserDefinedStruct.Structure.5EE7EFC04199F44ED9DED0A5EBAFCDF8,
+Blueprint=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
+K2Node_MacroInstance=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/BPC_Desk1.BPC_Desk1;
@@ -1894,5 +1937,8 @@ bMaterialQualityUsed[3]=0
 DeleteConfirmationVariable_Warning=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
+
+[DetailCategoriesAdvanced]
+Blueprint.ClassOptions=True
 
