--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -195,11 +195,8 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
+CleanShutdown=False
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/Blueprints/BP_DeskMaster.BP_DeskMaster
-OpenAssetsAtExit=/Game/Blueprints/BPS_InteractableActorStructure.BPS_InteractableActorStructure
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -554,11 +551,11 @@ Pawn=
 BPC_Desk1_C="\"Object.Default.beginPlayTags\" \"Object.Default.InteractableActorInfo\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BPS_InteractableActorStructure
-MRUItem1=/Game/Blueprints/BP_DeskMaster
-MRUItem2=/Game/FirstPerson/Input/IMC_Default
-MRUItem3=/Game/FirstPerson/Input/Actions/IA_Interact
-MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/Blueprints/BPS_InteractableActorStructure
+MRUItem2=/Game/Blueprints/BP_DeskMaster
+MRUItem3=/Game/FirstPerson/Input/IMC_Default
+MRUItem4=/Game/FirstPerson/Input/Actions/IA_Interact
 MRUItem5=/Game/Blueprints/BPC_Desk1
 MRUItem6=/Game/Materials/M_HighlightMat
 MRUItem7=/Game/UserInterface/WBP_HUD
