--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -197,6 +197,8 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
+OpenAssetsAtExit=/Game/Blueprints/BP_DeskMaster.BP_DeskMaster
+OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -529,6 +531,7 @@ Blueprint.Thumbnail=True
 K2Node_SwitchString.PinOptions=True
 K2Node_SwitchInteger.PinOptions=True
 K2Node_FormatText.Arguments=True
+PlayerMappableInputConfig.Input=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -542,23 +545,29 @@ Object=
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
-BP_DeskMaster_C="\"Object.beginPlayTags\" "
-InputMappingContext="\"Object.Mappings.Mappings.Mappings[14]\" "
-DataAsset="\"Object.Mappings.Mappings.Mappings[14]\" "
+BP_DeskMaster_C="\"Object.Default.beginPlayTags\" \"Object.Default.InteractableActorInfo\" "
+InputMappingContext=
+DataAsset=
 BP_FirstPersonCharacter_C=
 Character=
 Pawn=
 BPC_Desk1_C="\"Object.Default.beginPlayTags\" \"Object.Default.InteractableActorInfo\" "
+PlayerMappableInputConfig="\"Object.Input.Input|PlayerMappable\" \"Object.Input.Input|PlayerMappable.Contexts\" "
+PrimaryDataAsset="\"Object.Input.Input|PlayerMappable\" \"Object.Input.Input|PlayerMappable.Contexts\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem1=/Game/Blueprints/BPS_InteractableActorStructure
-MRUItem2=/Game/Blueprints/BP_DeskMaster
+MRUItem0=/Game/FirstPerson/Input/IMC_SittingDown
+MRUItem1=/Game/FirstPerson/Input/IMC_Walking
+MRUItem2=/Game/FirstPerson/Input/PMIC_Default
 MRUItem3=/Game/FirstPerson/Input/IMC_Default
-MRUItem4=/Game/FirstPerson/Input/Actions/IA_Interact
+MRUItem4=/Game/FirstPerson/Input/IMC_Weapons
 MRUItem5=/Game/Blueprints/BPC_Desk1
-MRUItem6=/Game/Materials/M_HighlightMat
-MRUItem7=/Game/UserInterface/WBP_HUD
+MRUItem6=/Game/Blueprints/BP_DeskMaster
+MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem8=/Game/Blueprints/BPS_InteractableActorStructure
+MRUItem9=/Game/FirstPerson/Input/Actions/IA_Interact
+MRUItem10=/Game/Materials/M_HighlightMat
+MRUItem11=/Game/UserInterface/WBP_HUD
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -651,6 +660,9 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 /Game/FirstPerson/Input/Actions/IA_Interact.IA_Interact=0
 /Game/FirstPerson/Input/IMC_Default.IMC_Default=0
 /Game/Blueprints/BPS_InteractableActorStructure.BPS_InteractableActorStructure=0
+/Game/FirstPerson/Input/IMC_SittingDown.IMC_SittingDown=0
+/Game/FirstPerson/Input/IMC_Weapons.IMC_Weapons=1
+/Game/FirstPerson/Input/IMC_Walking.IMC_Walking=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1759,14 +1771,17 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,
 BP_FirstPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,
 BoxComponent=PostProcessVolume.Rendering Features.Rendering Features,
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
-EdGraph=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
+EdGraph=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,
 StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
 UserDefinedStruct=UserDefinedStruct.Structure.AE03DC9346529D8EC318B981AF4834A3,UserDefinedStruct.Structure.4933E9B84B84FFA52EA3AE9DFAA4993B,UserDefinedStruct.Structure.5EE7EFC04199F44ED9DED0A5EBAFCDF8,UserDefinedStruct.Structure.05B150D747338CCE3D2D1F90F8DD1BDD,
 BPS_InteractableActorStructure=
 Blueprint=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,
 K2Node_MacroInstance=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,
+K2Node_CallFunction=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,
+K2Node=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,
+K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/BPC_Desk1.BPC_Desk1;
