Changed packaging settings

--- a/MyProject/Config/DefaultGame.ini
+++ b/MyProject/Config/DefaultGame.ini
@@ -1,3 +1,10 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=EB2B53194D6740B6CE19FF9B276868A3
-ProjectName=First Person BP Game Template
+ProjectName=Project Hotel
+ProjectVersion=0.0.1
+CompanyName=UGC Software
+CompanyDistinguishedName=UGC
+Homepage=www.rafalportfolio.com
+LicensingTerms=MIT
+Description=Hotel Project
+
