Added standing up input

--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -195,10 +195,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/Blueprints/BP_DeskMaster.BP_DeskMaster
-OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -544,13 +541,13 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget="\"Object.Appearance.Font\" "
 Visual="\"Object.Appearance.Font\" "
-Object=
+Object="\"Object.Mappings.Mappings.Mappings[1]\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 BP_DeskMaster_C="\"Object.beginPlayTags\" "
-InputMappingContext=
-DataAsset=
+InputMappingContext="\"Object.Mappings.Mappings.Mappings[1]\" "
+DataAsset="\"Object.Mappings.Mappings.Mappings[1]\" "
 BP_FirstPersonCharacter_C=
 Character=
 Pawn=
@@ -563,18 +560,19 @@ K2Node="\"Object.PinOptions.PinNames\" "
 EdGraphNode=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Input/IMC_SittingDown
-MRUItem1=/Game/FirstPerson/Input/IMC_Walking
-MRUItem2=/Game/FirstPerson/Input/PMIC_Default
-MRUItem3=/Game/FirstPerson/Input/IMC_Default
-MRUItem4=/Game/FirstPerson/Input/IMC_Weapons
-MRUItem5=/Game/Blueprints/BPC_Desk1
-MRUItem6=/Game/Blueprints/BP_DeskMaster
-MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem8=/Game/Blueprints/BPS_InteractableActorStructure
-MRUItem9=/Game/FirstPerson/Input/Actions/IA_Interact
-MRUItem10=/Game/Materials/M_HighlightMat
-MRUItem11=/Game/UserInterface/WBP_HUD
+MRUItem0=/Game/FirstPerson/Input/Actions/IA_StandUp
+MRUItem1=/Game/FirstPerson/Input/IMC_SittingDown
+MRUItem2=/Game/FirstPerson/Input/IMC_Walking
+MRUItem3=/Game/FirstPerson/Input/PMIC_Default
+MRUItem4=/Game/FirstPerson/Input/IMC_Default
+MRUItem5=/Game/FirstPerson/Input/IMC_Weapons
+MRUItem6=/Game/Blueprints/BPC_Desk1
+MRUItem7=/Game/Blueprints/BP_DeskMaster
+MRUItem8=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem9=/Game/Blueprints/BPS_InteractableActorStructure
+MRUItem10=/Game/FirstPerson/Input/Actions/IA_Interact
+MRUItem11=/Game/Materials/M_HighlightMat
+MRUItem12=/Game/UserInterface/WBP_HUD
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1774,7 +1772,7 @@ StaticMeshComponent=PostProcessVolume.Rendering Features.Rendering Features,
 BillboardComponent=PostProcessVolume.Rendering Features.Rendering Features
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 BP_DeskMaster_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Interact.IA_Interact,
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings.None,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,
 BP_FirstPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,
 BoxComponent=PostProcessVolume.Rendering Features.Rendering Features,
