Created not displaying pc screen

--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -198,7 +198,6 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -877,6 +876,30 @@ ArrowComponent.Tags=True
 ArrowComponent.ComponentReplication=True
 ArrowComponent.Cooking=True
 ArrowComponent.Events=True
+WidgetInteractionComponent.Variable=True
+WidgetInteractionComponent.TransformCommon=True
+WidgetInteractionComponent.Sockets=True
+WidgetInteractionComponent.Interaction=True
+WidgetInteractionComponent.Debugging=True
+WidgetInteractionComponent.ComponentTick=True
+WidgetInteractionComponent.Rendering=True
+WidgetInteractionComponent.Tags=True
+WidgetInteractionComponent.ComponentReplication=True
+WidgetInteractionComponent.Activation=True
+WidgetInteractionComponent.Cooking=True
+WidgetInteractionComponent.Events=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+WidgetInteractionComponent.LOD=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -884,9 +907,9 @@ Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Objec
 Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.Font\" "
-Visual="\"Object.Appearance.Font\" "
-Object=
+Widget="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+Visual="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+Object="\"Object.Tags.ComponentTags\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
@@ -906,30 +929,37 @@ EdGraphNode=
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Tags.ComponentTags\" "
 PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Tags.ComponentTags\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Tags.ComponentTags\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.Tags.ComponentTags\" "
 CineCameraComponent="\"Object.Current Camera Settings.LensSettings\" \"Object.Current Camera Settings.FocusSettings\" \"Object.PostProcess.PostProcessSettings\" \"Object.Tags.ComponentTags\" "
 CineCameraActor="\"Object.CameraActor.CameraComponent.Object.Current Camera Settings.FocusSettings\" \"Object.Actor.Tags\" "
 CameraActor="\"Object.CameraActor.CameraComponent.Object.Current Camera Settings.FocusSettings\" \"Object.Actor.Tags\" "
 ArrowComponent="\"Object.Tags.ComponentTags\" "
+BoxComponent="\"Object.Tags.ComponentTags\" "
+ShapeComponent="\"Object.Tags.ComponentTags\" "
+WidgetInteractionComponent="\"Object.Tags.ComponentTags\" "
+Border="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+ContentWidget="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+PanelWidget="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_DeskMaster
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem2=/Game/Blueprints/BPC_Desk1
-MRUItem3=/Game/UserInterface/WBP_HUD
-MRUItem4=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem5=/Game/OfficeScene/Maps/tests
-MRUItem6=/Game/FirstPerson/Input/IMC_SittingDown
-MRUItem7=/Game/FirstPerson/Input/Actions/IA_StandUp
-MRUItem8=/Game/FirstPerson/Input/IMC_Walking
-MRUItem9=/Game/FirstPerson/Input/PMIC_Default
-MRUItem10=/Game/FirstPerson/Input/IMC_Default
-MRUItem11=/Game/FirstPerson/Input/IMC_Weapons
-MRUItem12=/Game/Blueprints/BPS_InteractableActorStructure
-MRUItem13=/Game/FirstPerson/Input/Actions/IA_Interact
-MRUItem14=/Game/Materials/M_HighlightMat
+MRUItem0=/Game/UserInterface/WBP_MonitorScreen
+MRUItem1=/Game/Blueprints/BP_DeskMaster
+MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem3=/Game/Blueprints/BPC_Desk1
+MRUItem4=/Game/UserInterface/WBP_HUD
+MRUItem5=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem6=/Game/OfficeScene/Maps/tests
+MRUItem7=/Game/FirstPerson/Input/IMC_SittingDown
+MRUItem8=/Game/FirstPerson/Input/Actions/IA_StandUp
+MRUItem9=/Game/FirstPerson/Input/IMC_Walking
+MRUItem10=/Game/FirstPerson/Input/PMIC_Default
+MRUItem11=/Game/FirstPerson/Input/IMC_Default
+MRUItem12=/Game/FirstPerson/Input/IMC_Weapons
+MRUItem13=/Game/Blueprints/BPS_InteractableActorStructure
+MRUItem14=/Game/FirstPerson/Input/Actions/IA_Interact
+MRUItem15=/Game/Materials/M_HighlightMat
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2153,6 +2183,7 @@ K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2
 CameraComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Ray Tracing Global Illumination,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Reflections|Screen Space Reflections,CameraComponent.PostProcess.Reflections|Ray Tracing Reflections,CameraComponent.PostProcess.Reflections,CameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features|Ray Tracing Ambient Occlusion,CameraComponent.PostProcess.Rendering Features|Ray Tracing Translucency,CameraComponent.PostProcess.Rendering Features|PathTracing,CameraComponent.PostProcess.Rendering Features,
 CineCameraComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,CineCameraComponent.PostProcess.Lens,CineCameraComponent.PostProcess.Lens|Depth of Field,CineCameraComponent.PostProcess.Rendering Features,CineCameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CineCameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CineCameraComponent.PostProcess.Rendering Features|Ray Tracing Translucency,
 CineCameraActor=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
+WidgetInteractionComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 
 [PlacementMode]
 RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
@@ -2327,6 +2358,7 @@ LastLogListing=PIE
 
 [DetailCategoriesAdvanced]
 Blueprint.ClassOptions=True
+K2Node_VariableGet.Variable=False
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
