--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -169,7 +169,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Maps
+ContentBrowserTab1.SelectedPaths=/Game/UserInterface
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -196,8 +196,9 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/BPC_Desk1.BPC_Desk1
+OpenAssetsAtExit=/Game/UserInterface/WBP_MonitorScreen.WBP_MonitorScreen
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -928,7 +929,7 @@ K2Node="\"Object.PinOptions.PinNames\" "
 EdGraphNode=
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Tags.ComponentTags\" "
 SceneComponent="\"Object.Tags.ComponentTags\" "
 ActorComponent="\"Object.Tags.ComponentTags\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.Tags.ComponentTags\" "
@@ -1056,6 +1057,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 /Game/FirstPerson/Input/IMC_Weapons.IMC_Weapons=1
 /Game/FirstPerson/Input/IMC_Walking.IMC_Walking=1
 /Game/FirstPerson/Input/Actions/IA_StandUp.IA_StandUp=1
+/Game/UserInterface/WBP_MonitorScreen.WBP_MonitorScreen=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2157,7 +2159,7 @@ bUseUnsortedMenus=False
 PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features
 BrushComponent=PostProcessVolume.Rendering Features.Rendering Features
 BPC_Desk1_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
-SceneComponent=
+SceneComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 StaticMeshComponent=PostProcessVolume.Rendering Features.Rendering Features,StaticMeshComponent.Collision.Collision,
 BillboardComponent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
@@ -2359,6 +2361,7 @@ LastLogListing=PIE
 [DetailCategoriesAdvanced]
 Blueprint.ClassOptions=True
 K2Node_VariableGet.Variable=False
+WidgetInteractionComponent.Debugging=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
