Changed starting map in project settings

--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2159,7 +2159,7 @@ bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
 PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features
-BrushComponent=
+BrushComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 BPC_Desk1_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 SceneComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 StaticMeshComponent=PostProcessVolume.Rendering Features.Rendering Features,StaticMeshComponent.Collision.Collision,
@@ -2368,6 +2368,7 @@ WidgetInteractionComponent.Debugging=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
+GameMapsSettings=True
 
 [MRU]
 MRUItem0=/Game/FirstPersonMap
